# adapterbot

./: pyproject.toml
scripts/: download_pretrained_model.py
utils/: WoW_retriver.py
