[tool.poetry]
name = "adapterbot"
version = "0.1.0"
description = "The Adapter-Bot: All-In-One Controllable Conversational Model"
authors = ["Your Name <you@example.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.9"
Flask = "^2.0.1"
nostril = "^0.1.1"
iso3166 = "^1.0.1"
torch = "^1.9.0"
transformers = "^4.10.2"
gdown = "^3.13.0"


[tool.poetry.dev-dependencies]
pytest = "^6.2.5"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
